Updated from the mod portal, with updates from qwerter96 and DarkNova

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -26,3 +26,9 @@ pipe-titanium-elbow=Titanium Elbow pipe
 pipe-tungsten-straight=Tungsten Straight pipe
 pipe-tungsten-junction=Tungsten T-Junction pipe
 pipe-tungsten-elbow=Tungsten Elbow pipe
+pipe-nitinol-straight=Nitinol Straight pipe
+pipe-nitinol-junction=Nitinol T-Junction pipe
+pipe-nitinol-elbow=Nitinol Elbow pipe
+pipe-copper-tungsten-straight=Copper Tungsten Straight pipe
+pipe-copper-tungsten-junction=Copper Tungsten T-Junction pipe
+pipe-copper-tungsten-elbow=Copper Tungsten Elbow pipe
